# strix-py-ns

./: .gitignore  .pylintrc  README.md  pytest.ini  requirements_dev.txt  run_coverage.cmd  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: run-pytest.yml
src/: namespace.py
tests/: test_dict.py  test_namespace.py  test_path.py
