[metadata]
name = pyns
version = 0.1.0
author = Gertjan Klein
author_email = gklein@parvos.nl
description = A namespace supporting attribute and dictionary-like access
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gertjanklein/pyns
project_urls =
    Bug Tracker = https://github.com/gertjanklein/pyns/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
py_modules = namespace
python_requires = >=3.6

